cabal-version:      2.4
name:               metroid-prime-randomizer-solver
version:            1.5.0
author:             Richard T. Weber
license:            BSD-2-Clause
license-file:       LICENSE
synopsis:           Checks Metroid Prime warps / elevator / vanilla randomizer logs
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Node, Parser, Graph, State, Util, Predicates, Solver
    build-depends:    base ^>=4.16.1.0, containers
    hs-source-dirs:   src
    default-language: Haskell2010

executable main
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.1.0,
        metroid-prime-randomizer-solver,
        directory
    hs-source-dirs:   app
    default-language: Haskell2010

executable explorer
    main-is:          Explorer.hs
    build-depends:
        base ^>=4.16.1.0, ansi-terminal, containers,
        metroid-prime-randomizer-solver

    hs-source-dirs:   app
    default-language: Haskell2010

Test-Suite test-medley
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     test
    build-depends:      base ^>=4.16.1.0,
                        test-framework,
                        test-framework-hunit,
                        HUnit,
                        containers,
                        metroid-prime-randomizer-solver
    default-language:   Haskell2010
