cabal-version:      2.4
name:               mp-warp-rando-checker
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Node, Parser, Graph

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.1.0, containers
    hs-source-dirs:   src
    default-language: Haskell2010

executable main
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.1.0,
        mp-warp-rando-checker

    hs-source-dirs:   app
    default-language: Haskell2010

executable explorer
    main-is:          Explorer.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.1.0, ansi-terminal, containers,
        mp-warp-rando-checker

    hs-source-dirs:   app
    default-language: Haskell2010

Test-Suite test-medley
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     test
  build-depends:      base ^>=4.16.1.0,
                      test-framework,
                      test-framework-hunit,
                      HUnit,
                      containers,
                      mp-warp-rando-checker
